# racing-tools

./: .gitignore  .gitmodules  README.md
converter/: README.md  process_all_telemetry.py  pyproject.toml
converter/converter/: README.md  channel_mapping.json  convert.py  session.py
data/telemetry/2025-07-26-solo2dl-RIMSportKarting-RotaxMax-volynkinmaksim-session-01/: 2025-07-26-solo2dl-RIMSportKarting-RotaxMax-volynkinmaksim-session-01.ld  aim.csv
data/telemetry/2025-08-03-mychron5-RIMSportKarting-RotaxJuniour-sakharovdenis-session-01/: 2025-08-03-mychron5-RIMSportKarting-RotaxJuniour-sakharovdenis-session-01.ld
data/telemetry/2025-10-12-mychron5-RIMSportKarting-RotaxJuniour-sakharovdenis-session-01/: 2025-10-12-mychron5-RIMSportKarting-RotaxJuniour-sakharovdenis-session-01.ld  Denis_Rotax Max_Rust kart_Generic testing_a_0235.drk  Denis_Rotax Max_Rust kart_Generic testing_a_0235.rrk  Denis_Rotax Max_Rust kart_Generic testing_a_0235.xrk  Denis_Rotax Max_Rust kart_Generic testing_a_0235.xrz  aim.csv
data/telemetry/2025-10-30-alfano-RIMSportKarting-mini160-nikoloz-session-01/: 2025-10-30-alfano-RIMSportKarting-mini160-nikoloz-session-01.ld  Excel_SN8448_301025_17H02_Nikoloz_P_RUSTAVI_INTERNATIONAL_MOTORPARK.csv
data/telemetry/2025-11-01-mychron5-RIMSportKarting-RotaxJuniour-kharitonovivan-session-02/: aim.csv  (+5 more)
motec_workspaces/: math.xml
render/: README.md  concat_videos.py  example_overlay.py  find_sync_offset.py  interactive_sync.py  mockup_overlay.py  mockup_sectors.py  ocr_sync.py  overlay.py  sync_ui.py  transcode_folder.py  video_split.py
(+76 files in other folders)
