[project]
name = "converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cantools>=40.7.1",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pillow>=11.0.0",
    "pyproj>=3.6.1",
    "pyshp>=2.3.1",
    "scipy>=1.16.3",
    "tqdm>=4.66.0",
]
